--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,107 @@
 <link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.6.0/pure-min.css">
 <link rel="stylesheet" type="text/css" href="../CSS/css.css">
 <title>{{ page.title }}</title>
+	<style>
+			body{
 
+		background-color:#dadae1;
+		color: #ffffff;
+	
+	}
+
+
+
+
+	h1 {
+
+		text-align: center;
+		margin: 0%;
+		font: 20vw Helvetica;
+		font-family: "Georgia, Serif";
+		color: rgba(255,255,255,1);
+
+		}
+	.pure-menu-link{
+		font-size: 2.1vw;
+		color: rgba(255,255,255,1);
+    }
+
+	.pure-menu{
+		font-size:2vw;   
+		background-color:#2e3a4f;
+		border: 0.1em solid black;
+		
+		right:35%;
+		
+	
+    }
+    .pure-menu-item{
+	    float:left;
+	    left: 32vw;
+
+    }
+    .pure-menu-selected{
+        background:rgba(255,255,255,1);
+        color:#2e3a4f;
+    }
+		
+
+    .hoofd-tekst {
+
+	    display: table-cell;
+        vertical-align: middle;
+        margin-bottom: 0;
+        font-size: 2vw;
+        color: white;
+        font-weight: 500;
+        text-shadow: 0 1px 1px black;	
+    }
+	#HomeTekst {
+		text-align: center;
+		display: table-cell;
+		vertical-align: middle;
+		margin-bottom: 0;
+		font-size: 1.5vw;
+		font-weight: 500;
+        text-shadow: 0 1px 1px black;		
+	}
+	#titel {
+		font-size: 2vw;
+		font-weight: 500;
+        text-shadow: 0 1px 1px black;	
+	}
+	footer{
+		text-align:center;
+		font-size: 0.3vw;
+		font-weight: 500;
+        text-shadow: 0 1px 1px black;
+
+	}
+	.button-secondary{
+
+		background-color: #2e3a4f;
+		width: 10vw;
+		height: 3vw;
+		color: white;
+		margin-left: 45vw;
+		font-size: 1vw;
+
+	}
+     .pure-table {
+         margin-left: 40vw;
+         margin-top: 3vw;
+     }
+     #p2tekst{
+        text-align:center;
+		font-size: 1vw;
+		font-weight: 500;
+        text-shadow: 0 1px 1px black;
+     }
+
+
+
+
+	</style>
 </head>
 <body>
 
